Sculpt Mode Grab Active Vertex and Dynamic Mesh Preview Bug. #69728

Closed
opened 2019-09-10 19:39:06 +02:00 by Zino Guerr · 43 comments

System Information
Operating system: Windows-10-10.0.1709 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30

Blender Version
Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-10 15:51, hash: 01a3a9c818

Short description of error
Grab Active Vertex and Dynamic Mesh Preview are not working, You get locked and the UI flickers.
You have to kill Blender from the Task Manager and sometimes simply Crashes.

Exact steps for others to reproduce the error
Have an Object with Subdivison Modifier->Sculpt Mode-> Grab Brush->Enable Grab Active Vertex(Brush Settings).

Demo of the Bug:
Draw.gif
Blend File:
cowbpy2.blend

**System Information** Operating system: Windows-10-10.0.1709 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30 **Blender Version** Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-10 15:51, hash: `01a3a9c818` **Short description of error** Grab Active Vertex and Dynamic Mesh Preview are not working, You get locked and the UI flickers. You have to kill Blender from the Task Manager and sometimes simply Crashes. **Exact steps for others to reproduce the error** Have an Object with Subdivison Modifier->Sculpt Mode-> Grab Brush->Enable Grab Active Vertex(Brush Settings). Demo of the Bug: ![Draw.gif](https://archive.blender.org/developer/F7731861/Draw.gif) Blend File: [cowbpy2.blend](https://archive.blender.org/developer/F7731812/cowbpy2.blend)
Author

Added subscriber: @Znio.G

Added subscriber: @Znio.G

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons

Yes, I can confirm. It never worked, even in the sculpt branch. (Windows)
b67ec3ae67a0f44c7ba9b937ed87653af595d6ea.gif

Yes, I can confirm. It never worked, even in the sculpt branch. (Windows) ![b67ec3ae67a0f44c7ba9b937ed87653af595d6ea.gif](https://archive.blender.org/developer/F7731998/b67ec3ae67a0f44c7ba9b937ed87653af595d6ea.gif)
Pablo Dobarro was assigned by Brecht Van Lommel 2019-09-11 09:42:04 +02:00
Member

I don't have a Windows PC to debug this. Does this patch fix the issue? #69728.diff

I don't have a Windows PC to debug this. Does this patch fix the issue? [#69728.diff](https://archive.blender.org/developer/F7734943/T69728.diff)
Author

In #69728#773622, @PabloDobarro wrote:
I don't have a Windows PC to debug this. Does this patch fix the issue? #69728.diff

I applied the patch but didn't work for me,but this time it didn't crash when you try to click the Menus & Workspaces..etc, I guess we need a Developer with Windows OS to figure this out.

> In #69728#773622, @PabloDobarro wrote: > I don't have a Windows PC to debug this. Does this patch fix the issue? [#69728.diff](https://archive.blender.org/developer/F7734943/T69728.diff) I applied the patch but didn't work for me,but this time it didn't crash when you try to click the Menus & Workspaces..etc, I guess we need a Developer with Windows OS to figure this out.
Member

@Znio.G What does this patch do on Windows? Does it render something when sculpting with a subdivision surface modifier?

@Znio.G What does this patch do on Windows? Does it render something when sculpting with a subdivision surface modifier?
Author

In #69728#773864, @PabloDobarro wrote:
@Znio.G What does this patch do on Windows? Does it render something when sculpting with a subdivision surface modifier?

No it doesn't Render anything, it's same as before Brush Cursor is locked and only System Cursor can be moved.

> In #69728#773864, @PabloDobarro wrote: > @Znio.G What does this patch do on Windows? Does it render something when sculpting with a subdivision surface modifier? No it doesn't Render anything, it's same as before Brush Cursor is locked and only System Cursor can be moved.

Added subscriber: @ChrisWillC

Added subscriber: @ChrisWillC

Only seems to work when you zoom in and out.

GrabActiveVert.gif

Only seems to work when you zoom in and out. ![GrabActiveVert.gif](https://archive.blender.org/developer/F7736645/GrabActiveVert.gif)
Member

@ChrisWillC Does D5761 work on Windows?

@ChrisWillC Does [D5761](https://archive.blender.org/developer/D5761) work on Windows?

@PabloDobarro It doesn't seem to be working.

@PabloDobarro It doesn't seem to be working.
Author

I managed to get it to draw like Chris but without zooming, it has to do with the Gizmos, i mapped the Viewport Gizmos toggle to a hotkey and have to be on first and it gave this effect, but the moment you click it crashes.
Bg.gif

For the Pose tool i only get a single point drawn.
Pose.gif
Hope this can help a bit.

I managed to get it to draw like Chris but without zooming, it has to do with the Gizmos, i mapped the Viewport Gizmos toggle to a hotkey and have to be on first and it gave this effect, but the moment you click it crashes. ![Bg.gif](https://archive.blender.org/developer/F7738558/Bg.gif) For the Pose tool i only get a single point drawn. ![Pose.gif](https://archive.blender.org/developer/F7738582/Pose.gif) Hope this can help a bit.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

I tried on windows, but wasn't able to reproduce it in current master.

I tried on windows, but wasn't able to reproduce it in current master.

Added subscriber: @VertexPainter

Added subscriber: @VertexPainter

Tried it on blender 76650402f3, windows 7x64, rx480 (19.9.2 drivers).
No lock and UI doesnt flicker, but blender crashes if i'm using grab brush. Sometimes it crash right away, sometimes after tweaking with grab brush and rotating viewport.

Tried it on blender 76650402f300, windows 7x64, rx480 (19.9.2 drivers). No lock and UI doesnt flicker, but blender crashes if i'm using grab brush. Sometimes it crash right away, sometimes after tweaking with grab brush and rotating viewport.
Author

Hi @Jeroen-Bakker, for me it's still the same with a clean new build, i have to use the Viewport Gizmos shortcut to get out of the locked state, is this a hardware specific issue?.
Still.gif

Hi @Jeroen-Bakker, for me it's still the same with a clean new build, i have to use the Viewport Gizmos shortcut to get out of the locked state, is this a hardware specific issue?. ![Still.gif](https://archive.blender.org/developer/F7752766/Still.gif)

Added subscriber: @MetinSeven-1

Added subscriber: @MetinSeven-1

Tried it on a simple quad sphere with Subdivision modifier, no issues.

Tried the example scene as well, also no problems.

Blender 2.81 Alpha
September 16, 23:16:10 - 76650402f3
Windows 10 Pro 64-bit
NVIDIA GeForce RTX 2080 Ti.

Tried it on a simple quad sphere with Subdivision modifier, no issues. Tried the example scene as well, also no problems. Blender 2.81 Alpha September 16, 23:16:10 - 76650402f300 Windows 10 Pro 64-bit NVIDIA GeForce RTX 2080 Ti.
Member

Added subscriber: @scorpion81

Added subscriber: @scorpion81
Member

Tried the provided blend with 76650402f3 and a master version from september 13th.
Except maybe the extraneous green dot "far away" from the active vertex I also had no flicker or locking.
Windows 10 Pro 64-bit
Intel UHD 620 (laptop) (Lol, a miracle 2.8 seems to run flawlessly with this hardware :) )

Tried the provided blend with 76650402f300 and a master version from september 13th. Except maybe the extraneous green dot "far away" from the active vertex I also had no flicker or locking. Windows 10 Pro 64-bit Intel UHD 620 (laptop) (Lol, a miracle 2.8 seems to run flawlessly with this hardware :) )
Member

Hi @Znio.G

Can you update your graphics drivers there are almost a year old, might be a driver issue.

Hi @Znio.G Can you update your graphics drivers there are almost a year old, might be a driver issue.

Added subscriber: @rambobl

Added subscriber: @rambobl

This comment was removed by @rambobl

*This comment was removed by @rambobl*

Added subscriber: @Xorrito

Added subscriber: @Xorrito

Keeps happening
Can't update graphic drivers since Nvidia introduced many bugs on my card
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.24
Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-16 21:02, hash: 76650402f3

Keeps happening Can't update graphic drivers since Nvidia introduced many bugs on my card Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.24 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-16 21:02, hash: `76650402f3`

Added subscriber: @brecht

Added subscriber: @brecht

I fixed the drawing glitches I could reproduce.

I don't see any crashes though. We are missing a .blend file and clear steps to reproduce those.

I fixed the drawing glitches I could reproduce. I don't see any crashes though. We are missing a .blend file and clear steps to reproduce those.
Member

@brecht I know where those crashes come from, F7734943 should fix it. I'll create a patch just for that.

@brecht I know where those crashes come from, [F7734943](https://archive.blender.org/developer/F7734943/T69728.diff) should fix it. I'll create a patch just for that.

2019-09-17 14-07-04.mp4
It kinda works now on
Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 14:22, hash: 884a385287

[2019-09-17 14-07-04.mp4](https://archive.blender.org/developer/F7753730/2019-09-17_14-07-04.mp4) It kinda works now on **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 14:22, hash: `884a385287`

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Yes, the mesh preview only shows up if you activate any of the transform tools first.

2019-09-17_19-06-55.mp4

Yes, the mesh preview only shows up if you activate any of the transform tools first. [2019-09-17_19-06-55.mp4](https://archive.blender.org/developer/F7753750/2019-09-17_19-06-55.mp4)
Author

In #69728#777688, @Jeroen-Bakker wrote:
Hi @Znio.G

Can you update your graphics drivers there are almost a year old, might be a driver issue.

I have updated the driver to the latest one Tue Sep 10, 2019 and it's exactly what the guys are showing in the videos.

Here is a blend file without activating the transform tools, the moment you do that and use the grab brush the cage gets drawn but after using it for a while it crashes..............the Pose Brush is now working correctly though.
Bug3.blend

> In #69728#777688, @Jeroen-Bakker wrote: > Hi @Znio.G > > Can you update your graphics drivers there are almost a year old, might be a driver issue. I have updated the driver to the latest one Tue Sep 10, 2019 and it's exactly what the guys are showing in the videos. Here is a blend file without activating the transform tools, the moment you do that and use the grab brush the cage gets drawn but after using it for a while it crashes..............the Pose Brush is now working correctly though. [Bug3.blend](https://archive.blender.org/developer/F7753804/Bug3.blend)

Removed subscriber: @MetinSeven-1

Removed subscriber: @MetinSeven-1

Removed subscriber: @rambobl

Removed subscriber: @rambobl

Added subscriber: @Abrases

Added subscriber: @Abrases

Hi,

I have tested this on my home computer and work computer with the same result as Lucas.

  • Doesn't work until I activate a gizmo, still work after disabling the gizmo

Both are under Windows 10
Home : lastest update
Work : 1803

Home : Gigabyte RTX 2070 Gaming OC, Latest Nvidia Drivers (441.34)
Work : GTX 1070, 440.97

Home : Ryzen 5 3600X with 32 Go DDR4
Work : Xeon W-2135 with 128 Go DDR4

I've build it locally and I have the issue so I might take some time to try to understand why this happen. In the meantime if you can't reproduce it but have an idea about a fix I could try the fix for you.

Hi, I have tested this on my home computer and work computer with the same result as Lucas. - Doesn't work until I activate a gizmo, still work after disabling the gizmo Both are under Windows 10 Home : lastest update Work : 1803 Home : Gigabyte RTX 2070 Gaming OC, Latest Nvidia Drivers (441.34) Work : GTX 1070, 440.97 Home : Ryzen 5 3600X with 32 Go DDR4 Work : Xeon W-2135 with 128 Go DDR4 I've build it locally and I have the issue so I might take some time to try to understand why this happen. In the meantime if you can't reproduce it but have an idea about a fix I could try the fix for you.

So after some investigation why enabling gizmo make it work I found that by adding this code at paint_cursor.c:1487 "fix" this issue

GLuint buffer[MAXPICKBUF];
rcti rect;

rect.xmin = rect.ymin = 0.0f;
rect.xmax = rect.ymax = 0.0f;
GPU_select_begin(buffer, ARRAY_SIZE(buffer), &rect, GPU_SELECT_NEAREST_FIRST_PASS, 0);
GPU_select_end();

I don' t understand quite the why tho ... (yet)

So it seems to be related to glClear(GL_DEPTH_BUFFER_BIT); in fact this calling this just one time before sculpt_geometry_preview_lines_draw is fixing the issue as well.

So after some investigation why enabling gizmo make it work I found that by adding this code at paint_cursor.c:1487 "fix" this issue GLuint buffer[MAXPICKBUF]; rcti rect; rect.xmin = rect.ymin = 0.0f; rect.xmax = rect.ymax = 0.0f; GPU_select_begin(buffer, ARRAY_SIZE(buffer), &rect, GPU_SELECT_NEAREST_FIRST_PASS, 0); GPU_select_end(); I don' t understand quite the why tho ... (yet) **So it seems to be related to glClear(GL_DEPTH_BUFFER_BIT); in fact this calling this just one time before sculpt_geometry_preview_lines_draw is fixing the issue as well.**
Member

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Member

The issue reported was fixed for Windows as far as I know. If there are any other bugs in this feature, please open another bug report describing them.

The issue reported was fixed for Windows as far as I know. If there are any other bugs in this feature, please open another bug report describing them.
Author

In #69728#845523, @PabloDobarro wrote:
The issue reported was fixed for Windows as far as I know. If there are any other bugs in this feature, please open another bug report describing them.

Okay, there is still one, I'll make another report for it

> In #69728#845523, @PabloDobarro wrote: > The issue reported was fixed for Windows as far as I know. If there are any other bugs in this feature, please open another bug report describing them. Okay, there is still one, I'll make another report for it

Added subscriber: @Vyach

Added subscriber: @Vyach

Removed subscriber: @Vyach

Removed subscriber: @Vyach
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
14 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69728
No description provided.