Fix part of T69728: drawing glitches with sculpt dynamic mesh preview

Depth test must default to off for drawing outside the 3D viewport and
overlays like cursors.